--- a/index.html
+++ b/index.html
@@ -46,28 +46,54 @@
             <div class="experience-grid-container">
                 <!--Sections-->
                 <div id="aboutme" class="experience-grid-item-about border-right"> 
-                    About Me
+                    About <br>
+                    Me
                 </div>
                 <div class="about1"><img src="assets/images/me.jpg" alt=""></div>
                 <div class="about2">
-                    As a 25+ year experiential marketing professional, I help Fortune 100+ companies reach consumers and grow their brands. I have worked with brands in the following categories: motorcycling, automotive, consumer packaged goods, toys, financial, retail services, pharmaceutical, spirits and beer, and sustainability initiatives.
+                    A 25+ year experiential marketing professional, helping Fortune 100+ companies reach consumers and grow their brands. Experience with brands in the following categories: motorcycling, automotive, consumer packaged goods, toys, financial, retail services, pharmaceutical, spirits and beer, and sustainability initiatives.
                 </div>
                 <div id="work" class="experience-grid-item-work border-right"> 
                     Work
+                </div> 
+                <div class="work1 background-image bottom-left">
+                    <a href="https://mofletch.github.io/Run-Buddy/"><img src="./assets/images/Run-Buddy.png" alt=""></a>
+                    <div class="text-block">
+                        Run Buddy <br>
+                        HTML/CSS
+                    </div>  
                 </div>
-                <div class="work1">
-                    <img src="../Mod2Challenge/assets/images/Run-Buddy.png" alt="">
-                        <div class="text-block-run-buddy">
-                            <h4>Run Buddy</h4>
-                            <p>HTML/CSS</p>                          
-                        </div>
+                <div class="work2 background-image bottom-left">
+                    <a href="https://motfletch.github.io/Code-Refactor/"><img src="../Mod2Challenge/assets/images/Code-Refactor-Page.png" alt=""></a>
+                    <div class="text-block">
+                        Horiseon <br>
+                        HTML/CSS
+                    </div>         
                 </div>
-                <div class="work2"><img src="../Mod2Challenge/assets/images/Code-Refactor-Page.png" alt=""></div>
-                <div class="work3"><img src="../Mod2Challenge/assets/images/Summer-Placeholder.jpg" alt=""></div>
-                <div class="work4"><img src="../Mod2Challenge/assets/images/Fall-Placeholder.jpg" alt=""></div>
-                <div class="work5"><img src="../Mod2Challenge/assets/images/Winter-Placeholder.jpg" alt=""></div>
+                <div class="work3 background-image bottom-left">
+                    <a href="https://en.wikipedia.org/wiki/Summer"><img src="../Mod2Challenge/assets/images/Summer-Placeholder.jpg" alt=""></a>
+                    <div class="text-block">
+                        TBD 1 <br>
+                        HTML/CSS
+                    </div> 
+                </div>
+                <div class="work4 background-image bottom-left">
+                    <a href="https://en.wikipedia.org/wiki/Autumn"><img src="../Mod2Challenge/assets/images/Fall-Placeholder.jpg" alt=""></a>
+                    <div class="text-block">
+                        TBD 2 <br>
+                        HTML/CSS
+                    </div> 
+                </div>
+                <div class="work5 background-image bottom-left">
+                    <a href="https://en.wikipedia.org/wiki/Winter"><img src="./assets/images/Winter-Placeholder.jpg" alt=""></a>
+                    <div class="text-block">
+                        TBD 3 <br>
+                        HTML/CSS
+                    </div>  
+                </div>
                 <div id="contact-me" class="experience-grid-item-contact border-right">
-                    Contact Me
+                    Contact <br>
+                    Me
                 </div>
                 <div class="phone">
                     <a href="tel:2624244625">262-424-4625</a>
@@ -86,9 +112,6 @@
                 </div>
             </div> <!-- div service-grid-container -->
         </div> <!-- div service-grid-wrapper -->
-
-            </div>
-        </div>
     </section>
 </body>
 </html>
