--- a/index.html
+++ b/index.html
@@ -39,79 +39,63 @@
     </section>
      <!--end hero-->
     <!-- portfolio grid start-->
-    <section id="experience-grid" class="experience">
-        <!--experience-grid-wrapper start-->
-        <!--experience-grid-container start -->
-        <div class="experience-grid-wrapper">
-            <div class="experience-grid-container">
-                <!--Sections-->
-                <div id="aboutme" class="experience-grid-item-about border-right"> 
-                    About <br>
-                    Me
+    <div class="grid-container-wrapper">
+        <section class="grid-container">
+            <!--Sections-->
+            <div id="about-me" class="title item1-about border-right">
+                About <br>
+                Me</div>
+            <div class="photo item2-about"></div>
+            <div class="copy item3-about"> 25+ year experiential marketing professional, helping Fortune 100+ companies reach consumers and grow their brands. Experience with brands in the following categories: motorcycling, automotive, consumer packaged goods, toys, financial, retail services, pharmaceutical, spirits and beer, and sustainability initiatives.</div>
+                <div id="work" class="title item4-work border-right">Work</div>
+            <div class="photo item5-work">
+                <a href="https://mofletch.github.io/Run-Buddy/" title="Run-Buddy" id="gitBuddy" target="_blank">Run Buddy</a>
+                <div class="text-block">
+                    <h4>Run Buddy</h4>
+                    <p>HTML/CSS</p>
+                  </div>
+            </div>
+            <div class="photo item6-work">
+                <a href="https://mofletch.github.io/Code-Refactor/" title="Horiseon" id="gitHoriseon" target="_blank">Horiseon</a>
+                <div class="text-block">
+                    <h4>Horiseon</h4>
+                    <p>Refactoring</p>
                 </div>
-                <div class="about1"><img src="assets/images/me.jpg" alt=""></div>
-                <div class="about2">
-                    A 25+ year experiential marketing professional, helping Fortune 100+ companies reach consumers and grow their brands. Experience with brands in the following categories: motorcycling, automotive, consumer packaged goods, toys, financial, retail services, pharmaceutical, spirits and beer, and sustainability initiatives.
+            </div>
+            <div class="photo item7-work">
+                <div class="text-block">
+                    <h4>TBD 1</h4>
+                    <p>Java</p>
                 </div>
-                <div id="work" class="experience-grid-item-work border-right"> 
-                    Work
-                </div> 
-                <div class="work1 background-image bottom-left">
-                    <a href="https://mofletch.github.io/Run-Buddy/"><img src="./assets/images/Run-Buddy.png" alt=""></a>
-                    <div class="text-block">
-                        Run Buddy <br>
-                        HTML/CSS
-                    </div>  
+            </div>
+            <div class="photo item8-work">
+                <div class="text-block">
+                    <h4>TBD 2</h4>
+                    <p>React</p>
                 </div>
-                <div class="work2 background-image bottom-left">
-                    <a href="https://motfletch.github.io/Code-Refactor/"><img src="../Mod2Challenge/assets/images/Code-Refactor-Page.png" alt=""></a>
-                    <div class="text-block">
-                        Horiseon <br>
-                        HTML/CSS
-                    </div>         
+            </div>
+            <div class="photo item9-work">
+                <div class="text-block">
+                    <h4>TBD 3</h4>
+                    <p>SQL</p>
                 </div>
-                <div class="work3 background-image bottom-left">
-                    <a href="https://en.wikipedia.org/wiki/Summer"><img src="../Mod2Challenge/assets/images/Summer-Placeholder.jpg" alt=""></a>
-                    <div class="text-block">
-                        TBD 1 <br>
-                        HTML/CSS
-                    </div> 
-                </div>
-                <div class="work4 background-image bottom-left">
-                    <a href="https://en.wikipedia.org/wiki/Autumn"><img src="../Mod2Challenge/assets/images/Fall-Placeholder.jpg" alt=""></a>
-                    <div class="text-block">
-                        TBD 2 <br>
-                        HTML/CSS
-                    </div> 
-                </div>
-                <div class="work5 background-image bottom-left">
-                    <a href="https://en.wikipedia.org/wiki/Winter"><img src="./assets/images/Winter-Placeholder.jpg" alt=""></a>
-                    <div class="text-block">
-                        TBD 3 <br>
-                        HTML/CSS
-                    </div>  
-                </div>
-                <div id="contact-me" class="experience-grid-item-contact border-right">
-                    Contact <br>
-                    Me
-                </div>
-                <div class="phone">
-                    <a href="tel:2624244625">262-424-4625</a>
-                </div>
-                <div class="biz-email">  
-                    <a href="mailto:maureensfletcher@gmail.com">maureensfletcher@gmail.com</a>
-                </div>
-                <div class="biz-git">
-                    <a href="https://MoFletch.github.io/">GitHub</a>
-                </div>
-                <div id="resume" class="experience-grid-item-resume border-right">
-                    Resume
-                </div>
-                <div class="resume-link">
-                        <a href="https://www.linkedin.com/in/maureenfletcher/">View Resume on LinkedIn</a>
-                </div>
-            </div> <!-- div service-grid-container -->
-        </div> <!-- div service-grid-wrapper -->
-    </section>
+            </div>
+            <div id="contact-me" class="title item10-contact border-right">Contact <br>
+                Me</div>
+            <div class="copy copydata item11-contact">
+                <a href="tel:2624244625">262-424-4625</a>
+            </div>
+            <div class="copy copydata item12-contact">
+                <a href="mailto:maureensfletcher@gmail.com">Gmail</a>
+            </div>
+            <div class="copy copydata item13-contact">
+                <a href="https://MoFletch.github.io/" target="_blank">GitHub</a>
+            </div>
+            <div id="resume" class="title item14-resume border-right">Resume</div>
+            <div class="copy copydata item15-resume">
+                <a href="https://www.linkedin.com/in/maureenfletcher/" target="_blank">View Resume on LinkedIn</a>
+            </div>
+        </section>
+    </div>
 </body>
 </html>
