--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@
                 About <br>
                 Me</div>
             <div class="photo item2-about"></div>
-            <div class="copy item3-about"> 25+ year experiential marketing professional, helping Fortune 100+ companies reach consumers and grow their brands. Experience with brands in the following categories: motorcycling, automotive, consumer packaged goods, toys, financial, retail services, pharmaceutical, spirits and beer, and sustainability initiatives.</div>
+            <div class="copy item3-about"> 25+ year experiential marketing professional, helping Fortune 100+ companies reach consumers and grow their brands. Experience with brands in the following categories: motorcycling, automotive, consumer packaged goods, toys, financial, retail services, pharmaceutical, spirits and beer, and sustainability initiatives. <br>
+                <br>
+                Currently learning a new skillset.  In school to become a full stack web developer.  Certificate completion February 2021.
+            </div>
                 <div id="work" class="title item4-work border-right">Work</div>
             <div class="photo item5-work">
                 <a href="https://mofletch.github.io/Run-Buddy/" title="Run-Buddy" id="gitBuddy" target="_blank">Run Buddy</a>
