adjusted media queries

--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
             <!--Sections-->
             <div id="about-me" class="title item1-about border-right">
                 About <br>
-                Me</div>
+                Me
+            </div>
             <div class="photo item2-about"></div>
             <div class="copy item3-about"> 25+ year experiential marketing professional, helping Fortune 100+ companies reach consumers and grow their brands. Experience with brands in the following categories: motorcycling, automotive, consumer packaged goods, toys, financial, retail services, pharmaceutical, spirits and beer, and sustainability initiatives. <br>
                 <br>
